--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,42 +13,28 @@
         <div class="row mb-5">
             <div class="col-12 text-center">
                 <section>
-                    <h1>Pedro Henrique</h1>
+                    <h1>Currículo Pessoal</h1>
                     <img class="foto-perfil" src="assets/imagens/Perfil Pedro.jpg">
                 </section>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-6 text-center mb-3 mb-md-0">
 
-                <div class="card" style="width: 18rem;">
-                    <div class="card-header">
-                      Informações Pessoais
-                    </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Masculino</li>
-                      <li class="list-group-item">20 anos</li>
-                      <li class="list-group-item">Solteiro</li>
-                    </ul>
-                  </div>
+            <nav class="navbar navbar-expand-lg navbar-light">
+              <div class="container">
+                <a class="navbar-brand" href="#">Identificação</a>
+                <a class="navbar-brand" href="#">Formação</a>
+                <a class="navbar-brand" href="#">Experiência Profissional</a>
+                <a class="navbar-brand" href="#">Objetivos</a>
+              </div>
+            </nav>
+          </div>
+   </div>
+  <div class="row text-center">
+      <h3><a class="link-opacity-100" href="https://www.linkedin.com/in/pedro-henrique-2b21301b5/" target="_blank">LinkedIn</a>
 
-            </div>
-            <div class="col-12 col-md-6 text-center">
-
-                <div class="card" style="width: 18rem;">
-                    <div class="card-header">
-                      Informações de Contato
-                    </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Telefone: (81)99510-6225</li>
-                      <li class="list-group-item">Email: peudrohcm@gmail.com</li>
-                      <li class="list-group-item">Rua Pedro Ernesto 100, Caxangá Recife-PE</li>
-                    </ul>
-                  </div>
-
-            </div>
-        </div>
-    </div>  
+      <a class="link-opacity-100" href="https://github.com/PeudHCM" target="_blank">GitHub</a>
+      </h3> 
+  </div>
+  
     
 </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
