--- a/Curriculo/hobbies.html
+++ b/Curriculo/hobbies.html
@@ -4,20 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formação</title>
+    <title>Hobbies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="style.css">
 </head>
 <body>
     <div class="center">
-        <h1>Formação</h1>
-        <pre>Técnico em Redes de Computadores pela Escola Técnica Professor Lucilo Ávila Pessoa
-            (JAN.2017 - DEZ.2019)
-        </pre>
-        <pre>Atualmente cursando Análise e Desenv. de Sistemas pela Faculdade Senac Pe
-            (AGO.2022 - DEZ.2024)
-        </pre>
+        <h1>Hobbies</h1>
+        <p>Gosto de videogames, filmes de ficção científica, e de colecionar bonecos de ação em miniatura.</p>
     </div>
-   
+    
 </body>
 </html>
